More paper content

--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -1,16 +1,27 @@
-## Units and Quantities {#sec:units}
+## Unitful Arrays and Quantities {#sec:units}
 
-At a basic level, `yt` is an engine for converting data created by a simulation code into a physically meaningful result.
-Attaching physical units to simulation data makes it possible to perform dimensional analysis on the simulation data, adding additional opportunities for catching errors in a data processing pipeline.
-In addition, it becomes straightforward to convert data from one unit system to another.
+At a basic level, `yt` is an engine for converting data created by a simulation code into a
+physically meaningful result. Attaching physical units to simulation data makes it possible to
+perform dimensional analysis on the simulation data, adding additional opportunities for catching
+errors in a data processing pipeline. In addition, it becomes straightforward to convert data from
+one unit system to another.
 
-In `yt` 4.0 we handle units in a an automatic fashion, with a symbolic units system. Originally part of `yt` itself, the unit system has now been split off into a standalone package, `unyt`. `unyt` leverages the symbolic math library `sympy` in combination with NumPy.
+In `yt` 4.0 we handle units in a an automatic fashion, with a symbolic units system. Originally part
+of `yt` itself since version 3.0, the unit system has now been split off into a standalone package,
+`unyt`. `unyt` leverages the symbolic math library `sympy` in combination with NumPy. In what
+follows, we will refer to `unyt` when describing the unit implementation, unless we are describing a
+`yt`-specific extension.
 
-Instead of returning a NumPy `ndarray` when users query `yt` data objects for fields, we return a `unyt_array`, a subclass of `ndarray`.
-`unyt_array` preserves `ndarray`'s array operations, including deep and shallow copies, broadcasting, views, and mathematical operations.
-Augmenting `ndarray`, `unyt_array` attaches unit metadata to the array data, enabling runtime checking of unit consistency in arithmetic operations between `unyt_array` instances, and making it trivial to compose new units using algebraic operations.
+Instead of returning a NumPy `ndarray` when users query `yt` data objects for fields, we return a
+`unyt_array`, a subclass of `ndarray`. `unyt_array` preserves `ndarray`'s array operations,
+including deep and shallow copies, broadcasting, views, and mathematical operations. Augmenting
+`ndarray`, `unyt_array` attaches unit metadata to the array data, enabling runtime checking of unit
+consistency in arithmetic operations between `unyt_array` instances, and making it trivial to
+compose new units using algebraic operations.
 
-As a trivial example, when one queries a data object (here given the generic name `dd`) for the density field, we get back a `unyt_array`, including both the simulation data for the density field, and the units of the density field, in this case $\rm{g}/\rm{cm}^3$:
+As a trivial example, when one queries a data object (here given the generic name `dd`) for the
+density field, we get back a `unyt_array`, including both the simulation data for the density field,
+and the units of the density field, in this case $\rm{g}/\rm{cm}^3$:
 
 ```python
 >>> dd['density'] 
@@ -26,10 +37,11 @@ One of the nicest aspects of the unit system is that the symbolic algebra for un
    1.12e-25 1.59e-25 1.09e-24] g/cm**3
 ```
 
-`unyt_array` is primarily useful for attaching units to NumPy `ndarray` instances.
-For scalar data, we have created the `unyt_quantity` class.
-`unyt_quantity` is a subclass of `unyt_array` with the requirement that the "array data" associated with the instance be limited to one element.
-`unyt_quantity` is primarily useful for physical constants and ensures that the units are propagated correctly when composing quantities from arrays, physical constants, and unitless scalars:
+`unyt_array` is primarily useful for attaching units to NumPy `ndarray` instances. For scalar data,
+we have created the `unyt_quantity` class. `unyt_quantity` is a subclass of `unyt_array` with the
+requirement that the "array data" associated with the instance be limited to one element.
+`unyt_quantity` is primarily useful for physical constants and ensures that the units are propagated
+correctly when composing quantities from arrays, physical constants, and unitless scalars:
 
 ```python
 >>> from unyt import boltzmann_constant
@@ -38,35 +50,45 @@ For scalar data, we have created the `unyt_quantity` class.
  1.63e-12 1.59e-12 1.40e-12] erg
 ```
 
-In what follows, we will refer to both array and scalar quantities as arrays generically for the purpose of brevity.
+In what follows, we will refer to both array and scalar quantities as arrays generically for the
+purpose of brevity.
 
 ### Implementation {#sec:units-implementation}
 
-Our unit system has 6 base dimensions, `mass`, `length`, `time`, `temperature`, and `angle`.
-The unitless `dimensionless` dimension, which we use to represent scalars is also technically a base dimension, although a trivial one.
-For convenience, we also create dimensionless unit symbols to represent quantities like metallicity that are formally dimensionless, but convenient to represent in a unit system.
+The unit implementation in `unyt` is based upon the notion of dimensionality. `unyt` has 8 base
+dimensions: `mass`, `length`, `time`, `temperature`, `current_mks`, `luminous_intensity`, `angle`,
+and `logarithmic`. The unitless `dimensionless` dimension is also technically a base dimension,
+although a trivial one. This facilitates the creation of dimensionless unit symbols to represent
+quantities like metallicity that are formally dimensionless, but convenient to represent in a unit
+system. We provide sympy `Symbol` objects for the base dimensions. The dimensionality of all other
+units are `sympy` `Expr` objects made up of the base dimension objects and the `sympy` operation
+objects `Mul` and `Pow`.
 
-For each dimension, we choose a base unit. The default base units in `yt` are the "Gaussian" cgs system, with grams, centimeters, seconds, Kelvin, and radians. All units can be described as combinations of these base dimensions along with a conversion factor to equivalent base units.
+This collection of dimensions is admittedly somewhat idiosyncratic. In the SI system of units, there
+is no base dimension of angle (the radian is dimensionless formally defined as meter/meter), and
+there is a dimension of "amount of substance", for which the base unit is mole, but in `yt` the
+`mol` unit is treated as dimensionless. The `logarithmic` dimension is a special case which will be
+described in more detail below. 
 
-The choice of CGS as the base unit system is somewhat arbitrary.
-Most unit systems choose SI as the reference unit system.
-We use CGS to stay consistent with the rest of the `yt` codebase and to reflect the standard practice in astrophysics.
-In any case, using a **physical** unit system makes it possible to compare quantities and arrays produced by different datasets, possibly with different conversion factors to CGS and to code units.
-We go into more detail on this point below.
-In the future, we plan to make the preferred internal unit system a user-configurable option.
+For each dimension, we choose a base unit. The default base units for the first six dimensions mentioned above in `unyt` are from the SI system: kilograms, meters, seconds, kelvin, ampere, and candela. The default base unit for the `angle` dimension is radian, and the default base unit for the `logarithmic` dimension is the "neper", which is a logarithmic unit for ratios of quantities such as field strenth or power. All other units can be described as combinations of these base units along with a conversion factor to equivalent base units.
 
-We provide sympy `Symbol` objects for the base dimensions.
-The dimensionality of all other units are `sympy` `Expr` objects made up of the base dimension objects and the `sympy` operation objects `Mul` and `Pow`.
+For historical and practical reasons, the default base units in `yt` itself are the "Gaussian" centimeters-grams-seconds (CGS) system, where grams and centimeters serve as the different base units for mass and length, the other base units remaining the same as SI, though formally there are no independent base units for luminous intensity or current in CGS systems. CGS was chosen for `yt` to stay consistent with the rest of the `yt` codebase prior to `yt` 3.0 and to reflect the standard practice in astrophysics. 
 
-Let us first take some common units as examples: gram (`g`), erg (`erg`), and solar mass per cubic megaparsec (`Msun / Mpc**3`).
-`g` is an "atomic", CGS base unit, `erg` is an atomic unit in CGS, but is not a base unit, and `Msun / Mpc**3` is a combination of atomic units, which are not in CGS, and one of them even has an SI prefix.
-The dimensions of `g` are `mass` and the cgs factor is 1.
-The dimensions of `erg` are `mass * length**2 / time**2` and the cgs factor is 1.
-The dimensions of `Msun / Mpc**3` are `mass / length**3` and the cgs factor is about $6.8 \times 10^{-41}$.
+In any case, using a **physical** unit system makes it possible to compare quantities and arrays
+produced by different datasets, possibly with different conversion factors to CGS and to code units.
+We go into more detail on this point below, where we describe the different unit systems in yt. 
 
-We use the `UnitRegistry` class to define all valid atomic units.
-All unit registries contain a unit symbol lookup table (`dict``) containing the valid units' dimensionality and cgs conversion factor.
-Here is what it would look like with the above units:
+Let us first take some common units as examples: gram (`g`), erg (`erg`), and solar mass per cubic
+megaparsec (`Msun / Mpc**3`). `g` is an "atomic" CGS base unit, `erg` is an atomic unit in CGS, but
+is not a base unit, and `Msun / Mpc**3` is a combination of atomic units, which are not in CGS, and
+one of them even has an SI prefix. The dimensions of `g` are `mass` and the CGS conversion factor is
+1. The dimensions of `erg` are `mass * length**2 / time**2` and the CGS conversion factor is 1. The
+dimensions of `Msun / Mpc**3` are `mass / length**3` and the CGS conversion factor is about $6.8
+\times 10^{-41}$.
+
+We use the `UnitRegistry` class to define all valid atomic units. All unit registries contain a unit
+symbol lookup table (in a Python `dict`) containing the valid units' dimensionality and cgs
+conversion factor. Here is what it would look like with the above units:
 
 ```python
 { "g":    (mass, 1.0),
@@ -75,28 +97,42 @@ Here is what it would look like with the above units:
   "pc":   (length, 3.08568e18), }
 ```
 
-Note that we only define **atomic** units here.
-There should be no operations in the registry symbol strings.
-When we parse non-atomic units like `Msun/Mpc**3`, we use the registry to look up the symbols.
-The unit system in `yt` knows how to handle units like `Mpc` by looking up unit symbols with and without prefixes and modify the conversion factor appropriately.
+Note that we only define **atomic** units here. There should be no operations or SI prefixes in the
+registry symbol strings. When we parse non-atomic units like `Msun/Mpc**3`, we use the registry to
+look up the symbols. The unit system in `yt` knows how to handle units like `Mpc` by looking up unit
+symbols with and without prefixes and modify the conversion factor appropriately.
 
-We construct a `Unit` object by providing a string containing atomic unit symbols, combined with operations in Python syntax, and the registry those atomic unit symbols are defined in.
-We use `sympy`'s string parsing features to create the unit expression from the user-provided string.
+We construct a `Unit` object by providing a string containing atomic unit symbols, combined with
+operations in Python syntax, and the registry those atomic unit symbols are defined in. We use
+`sympy`'s string parsing features to create the unit expression from the user-provided string.
 
-`Unit` objects are associated with four instance members, a unit `Expression` object, a dimensionality `Expression` object, a `UnitRegistry` instance, and a scalar conversion factor to CGS units.
-These data are available for a `Unit` object by accessing the `expr`, `dimensions`, `registry`, and `cgs_value` attributes, respectively.
+`Unit` objects are associated with four instance members, a unit `Expression` object, a
+dimensionality `Expression` object, a `UnitRegistry` instance, and a scalar conversion factor to CGS
+units. These data are available for a `Unit` object by accessing the `expr`, `dimensions`,
+`registry`, and `cgs_value` attributes, respectively.
 
-`Unit` provides the methods `same_dimensions_as`, which returns True if passed a `Unit` object that has equivalent dimensions, `get_cgs_equivalent`, which returns the equivalent cgs base units of the `Unit`, and the `is_code_unit` property, which is `True` if the unit is composed purely of code units and `False` otherwise.
-`Unit` also defines the `mul`, `div`, `pow`, and `eq` operations with other unit objects, making it easy to compose compound units algebraically.
+`Unit` provides the methods `same_dimensions_as`, which returns True if passed a `Unit` object that
+has equivalent dimensions, `get_cgs_equivalent`, which returns the equivalent cgs base units of the
+`Unit`, and the `is_code_unit` property, which is `True` if the unit is composed purely of code
+units and `False` otherwise. `Unit` also defines the `mul`, `div`, `pow`, and `eq` operations with
+other unit objects, making it easy to compose compound units algebraically.
 
-The `UnitRegistry` class provides the `add`, `remove`, and `modify` methods which allows users to add, remove, and modify atomic unit definitions present in `UnitRegistry` objects.
-A dictionary lookup table is also attached to the `UnitRegistry` object, providing an interface to look up unit symbols.
-In general, unit registries should only be adjusted inside of a code frontend, since otherwise quantities and arrays might be created with inconsistent unit metadata.
-Once a `Unit` object is created, it will not receive updates if the original unit registry is modified.
+The `UnitRegistry` class provides the `add`, `remove`, and `modify` methods which allows users to
+add, remove, and modify atomic unit definitions present in `UnitRegistry` objects. A dictionary
+lookup table is also attached to the `UnitRegistry` object, providing an interface to look up unit
+symbols. In general, unit registries should only be adjusted inside of a code frontend, since
+otherwise quantities and arrays might be created with inconsistent unit metadata. Once a `Unit`
+object is created, it will not receive updates if the original unit registry is modified.
 
-When a `Dataset` object is instantiated, it will itself instantiate and set up a `UnitRegistry` class that contains a full set of units that are defined for the simulation. This registry includes not only concrete physical units like `cm` or `K`, but also unit symbols that correspond to the unit system used internally in the simulation.
+When a `Dataset` object is instantiated, it will itself instantiate and set up a `UnitRegistry`
+class that contains a full set of units that are defined for the simulation. This registry includes
+not only concrete physical units like `cm` or `K`, but also unit symbols that correspond to the unit
+system used internally in the simulation.
 
-The `Dataset`-specific `UnitRegistry` also lets us encode the simulation unit system and scaling to physical units directly into `yt`. We do this via "code units". Every `Dataset` has a `length_unit`, `time_unit`, and `mass_unit` attributes that the user can quickly and easily query to discover the base units of the simulation. For example:
+The `Dataset`-specific `UnitRegistry` also lets us encode the simulation unit system and scaling to
+physical units directly into `yt`. We do this via "code units". Every `Dataset` has a `length_unit`,
+`time_unit`, and `mass_unit` attributes that the user can quickly and easily query to discover the
+base units of the simulation. For example:
 
 ```python
 >>> import yt
@@ -109,23 +145,84 @@ The `Dataset`-specific `UnitRegistry` also lets us encode the simulation unit sy
 5.555172850264421e+26 cm
 ```
 
+### Handling code units {#sec:handling-code-units}
+
+Code units are tightly coupled to on-disk parameters. To handle this, the `yt` unit system can modify, add, and remove unit symbols via the `UnitRegistry`.
+
+Optionally, `velocity_unit`, `density_unit`, `pressure_unit`, `temperature_unit`, and `magnetic_unit` may be defined as well if the units for these fields cannot be inferred from the mass, length, and time units.
+
+We also allow conversions to the simulation unit system. Data in code units are available by converting to `code_length`, `code_mass`, `code_time`, `code_velocity`, `code_density`, `code_magnetic`, `code_pressure`, `code_metallicity`, or any combination of those units.
+Code units preserve dimensionality: an array or quantity that has units of `cm` will be convertible to `code_length`.
+
+On-disk fields are presented in these unconverted code units. To obtain on-disk data, a user need only query a data object using an on-disk field name:
+
+```python
+>>> import yt
+>>> ds = yt.load("Enzo_64/DD0043/data0043")
+>>> dd = ds.all_data()
+>>> print(dd["enzo", "Density"])
+[6.74e-02 6.12e-02 8.92e-02 ... 
+ 9.09e+01 5.66e+01 4.27e+01] code_mass/code_length**3
+>>> print(dd["gas", "density"])
+[1.92e-31 1.74e-31 2.54e-31 ... 
+ 2.59e-28 1.61e-28 1.22e-28] g/cm**3
+```
+
+Here, the first data object query is returned in code units, while the second is returned in CGS units.
+This is because `("enzo", "Density")` is an on-disk field, while `("gas", "density")` is an internal `yt` field, aliased to the former. 
+
+#### Associating arrays with a coordinate system {#sec:associating-arrays-with-a-coordinate-system}
+
+To create quantities and arrays in units defined by a simulation coordinate system, we associate a `UnitRegistry` instance with `Dataset` instances.
+This unit registry contains the metadata necessary to convert the array to CGS from some other known unit system and is available via the `unit_registry` attribute that is attached to all `Dataset` instances.
+
+In the `set_code_units` method of the `Dataset` base class, the predefined `code_mass`, `code_length`, `code_time`, `code_velocity`, and `code_magnetic` symbols are adjusted to the appropriate values, and `length_unit`, `time_unit`, `mass_unit`, `velocity_unit`, and `magnetic_unit` attributes are attached to the `Dataset` instance. If there are frontend-specific code units, they should also be defined in subclasses by extending this function.
+
+### Handling cosmological units {#sec:handling-cosmological-units}
+
+A special case of astrophysical hydrodynamical simulations are cosmological simulations, which attempt to simulate the evolution of structure on cosmological length and time scales. Such simulations use "comoving coordinates", which is a notion of length that does not change with the expansion of the universe, in contrast to normal physical distances which do. 
+
+If we detect that we are loading a cosmological simulation performed in comoving coordinates, extra comoving units are added to the dataset's unit registry. Comoving length unit symbols are still named following the pattern `<length symbol>cm`, i.e. `Mpccm`. The $h$ symbol is treated as a base unit, `h`, which defaults to unity. The `Dataset.set_units` method updates the `h` symbol to the correct value when loading a cosmological simulation.
+
+The change of physical length is illustrated by the following example, of two datasets from the same simulation but at different times/scale factors/redshifts:
+
+```python
+>>> import yt
+>>> ds1 = yt.load('Enzo_64/DD0002/data0002')
+>>> ds2 = yt.load('Enzo_64/DD0043/data0043')
+>>> print(ds1.length_unit, ds2.length_unit)
+128 Mpccm/h, 128 Mpccm/h
+>>> print(ds1.length_unit.in_cgs())
+6.26145538088e+25 cm
+>>> print(ds2.length_unit.in_cgs())
+5.55517285026e+26 cm 
+```
+
+
 ### Unit conversions {#sec:unit-conversions}
 
-If a user needs the array in a different unit system, they can quickly convert using `convert_to_units`, which changes the units of an array in-place, or `in_units`, which returns a copy of the array. 
-
+If a user needs the array in a different unit system, they can quickly convert using
+`convert_to_units`, which changes the units of an array in-place, or `in_units`, which returns a
+copy of the array. 
 
 #### Equivalencies {#sec:equivalencies}
 
-In certain circumstances, conversion from one quantity to another with different dimensions is desired. This is the case for a number of frequently encountered, physically-motivated transformations which involve physical constants, such as:
+In certain circumstances, conversion from one quantity to another with different dimensions is
+desired. This is the case for a number of frequently encountered, physically-motivated
+transformations which involve physical constants, such as:
 
 * Conversions between temperature and energy via $E = k_BT$
 * Conversions between wavelength, frequency, and energy for light via $E = h\nu = hc/\lambda$
 * Conversions between mass and energy via $E = mc^2$
-* Conversions between velocity and Lorentz factor via $\gamma = 1/\sqrt{1-v^2/c^2}$
+* Conversions between velocity $v$ and Lorentz factor $\gamma$ via $\gamma = 1/\sqrt{1-v^2/c^2}$
 * Conversions between mass and Schwarzschild radius of a black hole via $R_s = 2GM/c^2$
-* Conversions between mass and Compton wavelength of a particle via $\lambda = h/mc$
+* Conversions between mass $m$ and Compton wavelength $\lambda$ of a particle via $\lambda = h/mc$
+* Conversions between density and number density via $n = \rho/({\mu}m_p)$
 
-As described above, conversions between quantities in different 
+As described above, conversions between quantities in different units is generally not allowed, but these special cases can be handled using unit equivalencies in `yt`. 
+
+#### Conversions between electromagnetic units in different systems
+
 
 ### Creating unyt_array and unyt_quantity instances {#sec:creating-ytarray-and-ytquantity-instances}
 
@@ -195,85 +292,3 @@ True
 >>> print(my_kg/my_g)
 1000.0 dimensionless
 ```
-
-### Handling code units {#sec:handling-code-units}
-
-Code units are tightly coupled to on-disk parameters. To handle this, the `yt` unit system can modify, add, and remove unit symbols via the `UnitRegistry`.
-
-Optionally, `velocity_unit`, `density_unit`, `pressure_unit`, `temperature_unit`, and `magnetic_unit` may be defined as well if the units for these fields cannot be inferred from the mass, length, and time units.
-
-We also allow conversions to the simulation unit system. Data in code units are available by converting to `code_length`, `code_mass`, `code_time`, `code_velocity`, `code_density`, `code_magnetic`, `code_pressure`, `code_metallicity`, or any combination of those units.
-Code units preserve dimensionality: an array or quantity that has units of `cm` will be convertible to `code_length`.
-
-On-disk fields are presented in these unconverted code units. To obtain on-disk data, a user need only query a data object using an on-disk field name:
-
-```python
->>> import yt
->>> ds = yt.load("Enzo_64/DD0043/data0043")
->>> dd = ds.all_data()
->>> print(dd["enzo", "Density"])
-[6.74e-02 6.12e-02 8.92e-02 ... 
- 9.09e+01 5.66e+01 4.27e+01] code_mass/code_length**3
->>> print(dd["gas", "density"])
-[1.92e-31 1.74e-31 2.54e-31 ... 
- 2.59e-28 1.61e-28 1.22e-28] g/cm**3
-```
-
-Here, the first data object query is returned in code units, while the second is returned in CGS units.
-This is because `("enzo", "Density")` is an on-disk field, while `("gas", "density")` is an internal `yt` field, aliased to the former. 
-
-
-#### Associating arrays with a coordinate system {#sec:associating-arrays-with-a-coordinate-system}
-
-To create quantities and arrays in units defined by a simulation coordinate system, we associate a `UnitRegistry` instance with `Dataset` instances.
-This unit registry contains the metadata necessary to convert the array to CGS from some other known unit system and is available via the `unit_registry` attribute that is attached to all `Dataset` instances.
-
-In the `set_code_units` method of the `Dataset` base class, the predefined `code_mass`, `code_length`, `code_time`, `code_velocity`, and `code_magnetic` symbols are adjusted to the appropriate values, and `length_unit`, `time_unit`, `mass_unit`, `velocity_unit`, and `magnetic_unit` attributes are attached to the `Dataset` instance. If there are frontend-specific code units, they should also be defined in subclasses by extending this function.
-
-#### Mixing modified unit registries {#sec:mixing-modified-unit-registries}
-
-It becomes necessary to consider mixing unit registries whenever data needs to be compared between disparate datasets.
-The most straightforward example where this comes up is a cosmological simulation time series, where the code units evolve with time.
-The problem is quite general --- we want to be able to compare any two datasets, even if they are unrelated.
-
-We have designed the unit system to refer to a physical coordinate system based on CGS conversion factors.
-This means that operations on quantities with different unit registries will always agree since the final calculation is always performed in CGS.
-
-The examples below illustrate the consistency of this choice:
-
-```python
->>> import yt
->>> ds1 = yt.load('Enzo_64/DD0002/data0002')
->>> ds2 = yt.load('Enzo_64/DD0043/data0043')
->>> print(ds1.length_unit, ds2.length_unit)
-128 Mpccm/h, 128 Mpccm/h
->>> print(ds1.length_unit.in_cgs())
-6.26145538088e+25 cm
->>> print(ds2.length_unit.in_cgs())
-5.55517285026e+26 cm 
->>> print(ds1.length_unit*ds2.length_unit)
-145359.100149 Mpccm**2
->>> print(ds2.length_unit*ds1.length_unit)
-1846.7055432 Mpccm**2
-```
-
-For the last two examples, the answer is not the seemingly trivial $128^2=16384,\rm{Mpccm}^2/h^2$.
-This is because the new quantity returned by the multiplication operation inherits the unit registry from the left object in binary operations.
-This convention is enforced for all binary operations on two `unyt_array` objects.
-Results are always consistent when referencing an unambiguous physical coordinate system:
-
-```python
->>> print((ds1.length_unit * ds2.length_unit).in_cgs())
-3.4783466935e+52 cm**2 
->>> print(ds1.length_unit.in_cgs() * ds2.length_unit.in_cgs())
-3.4783466935e+52 cm**2
-```
-
-### Handling cosmological units {#sec:handling-cosmological-units}
-
-If we detect that we are loading a cosmological simulation performed in comoving coordinates, extra comoving units are added to the dataset's unit registry.
-Comoving length unit symbols are still named following the pattern `<length symbol>cm`, i.e.
-`Mpccm`.
-
-The $h$ symbol is treated as a base unit, `h`, which defaults to unity.
-The `Dataset.set_units` method updates the `h` symbol to the correct value when loading a cosmological simulation.
