adding closing time figure and updating VL

--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -21,12 +21,8 @@ Recent practice, however, is more inclined toward commit "squashing," where mult
 One result of this is in figures such as the top row of Figure @fig:commit-graph, some contributors appear to have made a smaller quantity of contributions than an informed observer would recognize.
 Specifically, this applies to Clément Robert, who has contributed a considerable amount of change to the code base but has done so in a way that does not maximize the "statistics" presented below.
 This particular bias, toward contributions measured in count, is one that affects other members of the community as well, especially those whose participation is through community engagement, documentation, tutorials, and mentoring, rather than through direct modifications of the code base.
-
 To mitigate this shortcoming, we present the number of pull requests merged into the code base, as a function of time, as well as the time between their creation and their merge, in the lower row of Figure @fig:figure-commit-graph.
 This demonstrates that in many cases, the number of discrete contributions to the codebase varies greatly depending on the developer, and we believe gives a more informed perception of the activity in the code base.
-The longest time between opening a pull request and merging it was nearly four years; this was the addition of the `cf_radial` frontend, which occurred in fits and starts over a very long period of time.
-The next longest pull request durations are for splitting the code used for bitmap indexing (see @sec:point_indexing) and a per-field configuration system.
-This includes only those pull requests that occurred on GitHub.
 
 <div id="figure-commit-graph"></div>
 
@@ -37,6 +33,22 @@ Commits and pull requests to the source code as a function of time.
 <script>
 vegaEmbed('#figure-commit-graph', "images/yt_repo.vl");
 </script>
+
+In Figure @fig:pr-closing-time we have plotted distribution of pull requests based on the time between their creation and their merge.
+The longest time between opening a pull request and merging it was nearly four years; this was the addition of the `cf_radial` frontend, which occurred in fits and starts over a very long period of time.
+The next longest pull request durations are for splitting the code used for bitmap indexing (see @sec:point_indexing) and a per-field configuration system.
+This includes only those pull requests that occurred on GitHub.
+
+<div id="figure-pr-closing-time"></div>
+
+![
+The distribution of pull requests as a function of how long it took to close them.
+](images/blank.svg){#fig:pr-closing-time width="1px"}
+
+<script>
+vegaEmbed('#figure-pr-closing-time', "images/pr_stats.vl");
+</script>
+
 
 ### Unit Testing {#sec:unit_testing}
 
