--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -21,7 +21,7 @@ Recent practice, however, is more inclined toward commit "squashing," where mult
 One result of this is in figures such as the top row of Figure @fig:commit-graph, some contributors appear to have made a smaller quantity of contributions than an informed observer would recognize.
 Specifically, this applies to Clément Robert, who has contributed a considerable amount of change to the code base but has done so in a way that does not maximize the "statistics" presented below.
 This particular bias, toward contributions measured in count, is one that affects other members of the community as well, especially those whose participation is through community engagement, documentation, tutorials, and mentoring, rather than through direct modifications of the code base.
-To mitigate this shortcoming, we present the number of pull requests merged into the code base, as a function of time, as well as the time between their creation and their merge, in the lower row of Figure @fig:figure-commit-graph.
+To mitigate this shortcoming, we present the number of pull requests merged into the code base, as a function of time, as well as the time between their creation and their merge, in the lower row of Figure @fig:commit-graph.
 This demonstrates that in many cases, the number of discrete contributions to the codebase varies greatly depending on the developer, and we believe gives a more informed perception of the activity in the code base.
 
 <div id="figure-commit-graph"></div>
@@ -46,7 +46,7 @@ The distribution of pull requests as a function of how long it took to close the
 ](images/blank.svg){#fig:pr-closing-time width="1px"}
 
 <script>
-vegaEmbed('#figure-pr-closing-time', "images/pr_stats.vl");
+vegaEmbed('#figure-pr-closing-time', "images/pr_times.vl');
 </script>
 
 
