--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -46,7 +46,7 @@ The distribution of pull requests as a function of how long it took to close the
 ](images/blank.svg){#fig:pr-closing-time width="1px"}
 
 <script>
-vegaEmbed('#figure-pr-closing-time', "images/pr_times.vl');
+vegaEmbed('#figure-pr-closing-time', "images/pr_times.vl");
 </script>
 
 
