--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -24,14 +24,14 @@ This particular bias, toward contributions measured in count, is one that affect
 To mitigate this shortcoming, we present the number of pull requests merged into the code base, as a function of time, as well as the time between their creation and their merge, in the lower row of Figure @fig:commit-graph.
 This demonstrates that in many cases, the number of discrete contributions to the codebase varies greatly depending on the developer, and we believe gives a more informed perception of the activity in the code base.
 
-<div id="figure-commit-graph"></div>
+<div id="figure-commit-graph" class="center"></div>
 
 ![
 Commits and pull requests to the source code as a function of time.
 ](images/blank.svg){#fig:commit-graph width="1px"}
 
 <script>
-vegaEmbed('#figure-commit-graph', "images/yt_repo.vl");
+vegaEmbed('#figure-commit-graph', "images/yt_repo.vl", {"actions": false});
 </script>
 
 In Figure @fig:pr-closing-time we have plotted distribution of pull requests based on the time between their creation and their merge.
@@ -39,14 +39,14 @@ The longest time between opening a pull request and merging it was nearly four y
 The next longest pull request durations are for splitting the code used for bitmap indexing (see @sec:point_indexing) and a per-field configuration system.
 This includes only those pull requests that occurred on GitHub.
 
-<div id="figure-pr-closing-time"></div>
+<div id="figure-pr-closing-time" class="center"></div>
 
 ![
 The distribution of pull requests as a function of how long it took to close them.
 ](images/blank.svg){#fig:pr-closing-time width="1px"}
 
 <script>
-vegaEmbed('#figure-pr-closing-time', "images/pr_times.vl");
+vegaEmbed('#figure-pr-closing-time', "images/pr_times.vl", {"actions": false});
 </script>
 
 
