--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -198,46 +198,92 @@ The change of physical length is illustrated by the following example, of two da
 5.55517285026e+26 cm 
 ```
 
-
 ### Unit conversions {#sec:unit-conversions}
 
-If a user needs the array in a different unit system, they can quickly convert using
-`convert_to_units`, which changes the units of an array in-place, or `in_units`, which returns a
-copy of the array. 
+Aside from the ability to carry units through calculations, the other basic need for having a units implementation in `yt` is to be able to perform conversions of arrays from one unit to another of the same dimension. Creating a new array or quantity from an existing one can be done using the `in_units` method (or the `to` method, which is a convenient alias):
+
+```python
+```
+
+To convert an array in-place instead of making a copy, use `convert_to_units`:
+
+
+```python
+```
+
+Naturally, attempting to convert an array to units with a different dimension raises an error (in most cases, see below for exceptions):
+
+```python
+```
 
 #### Equivalencies {#sec:equivalencies}
 
 In certain circumstances, conversion from one quantity to another with different dimensions is
 desired. This is the case for a number of frequently encountered, physically-motivated
-transformations which involve physical constants, such as:
+transformations which involve physical constants, some examples of which are:
 
 * Conversions between temperature and energy via $E = k_BT$
 * Conversions between wavelength, frequency, and energy for light via $E = h\nu = hc/\lambda$
 * Conversions between mass and energy via $E = mc^2$
-* Conversions between velocity $v$ and Lorentz factor $\gamma$ via $\gamma = 1/\sqrt{1-v^2/c^2}$
-* Conversions between mass and Schwarzschild radius of a black hole via $R_s = 2GM/c^2$
-* Conversions between mass $m$ and Compton wavelength $\lambda$ of a particle via $\lambda = h/mc$
 * Conversions between density and number density via $n = \rho/({\mu}m_p)$
 
-As described above, conversions between quantities in different units is generally not allowed, but these special cases can be handled using unit equivalencies in `yt`. 
+As described above, conversions between quantities in different units is generally not allowed, but these special cases can be handled using unit equivalencies in `yt`. This is done using the `to_equivalent` method, which takes the unit in a different dimension that you want to convert to, and the equivalence you would like to use: 
+
+```python
+>>> import unyt as u
+>>> kT = 5.0*u.keV
+>>> print(kT.to_equivalent("K", "thermal")) # converting kT (energy) to T (temperature)
+34813557.843240075 K
+>>> print(kT.to_equivalent("angstrom", "spectral")) # converting kT (energy) to Angstrom (wavelength)
+4.132806438406553 Å
+>>> print(u.mp.to_equivalent("pm", "compton")) # print the proton's compton wavelength in picometers 
+0.00132141 pm
+```
+
+These equivalencies are straightforward--in the case of others, more information may be required. For example, to convert temperature to sound speed via $c_s = \sqrt{\gamma{k_BT}/(\mu{m_p})}$, there are two parameters which may be optionally changed, $\gamma$ and $\mu$, which are the ratio of specific heats and the mean molecular weight, respectively:
+
+```python
+>>> import unyt as u
+>>> T = 1.0e6*u.K
+>>> print(T.to_equivalent("km/s", "sound_speed")) # default gamma = 5/3 and mu = 0.6
+151.372499274441 km/s
+>>> print(T.to_equivalent("km/s", "sound_speed", mu=1.0))
+117.25263375274085 km/s
+>>> print(T.to_equivalent("km/s", "sound_speed", gamma=4./3.))
+135.39167932067505 km/s
+```
+
+For convenience, the same operations can actually be carried out simply using the `to` method described above:
+
+```python
+>>> import unyt as u
+>>> kT = 5.0*u.keV
+>>> print(kT.to("K", "thermal"))
+34813557.843240075 K
+>>> T = 1.0e6*u.K
+>>> print(T.to("km/s", "sound_speed", gamma=4./3.))
+135.39167932067505 km/s
+```
 
 #### Conversions between electromagnetic units in different systems
+
+Conversions between different electromagnetic units require special handling in many cases. The reason for this is that the units for many electromagnetic quantities do not have the same dimensions between the Gaussian cgs and the SI unit systems. For illustration, let us consider the units of magnetic field strength. Superficially, it would appear that there is a simple conversion between the cgs units of gauss (\rm{G}) and the SI units of tesla (\rm{T}), since numerically 1~\rm{G} = 10^{-4}~\rm{T}. However, if we examine the base units, we find that they have different dimensions:
 
 
 ### Creating unyt_array and unyt_quantity instances {#sec:creating-ytarray-and-ytquantity-instances}
 
-There are two ways to create new array and quantity objects: via a constructor, and by multiplying scalar data by a unit quantity.
+Aside from converting an array to new units as described above, there are two further ways to create new array and quantity objects: via a constructor, and by multiplying scalar data by a unit quantity.
 
 #### Class Constructor {#sec:class-constructor}
 
-The primary internal interface for creating new arrays and quantities is through the class constructor for `unyt_array`.
-The constructor takes three arguments.
-The first argument is the input data, which can be an integer, float, list, or array.
-The second argument, `input_units`, is a unit specification which must be a string or `Unit` instance.
-Last, users may optionally supply a `UnitRegistry` instance, which will be attached to the array.
-If no `UnitRegistry` is supplied, a default unit registry is used instead.
-Unit specification strings must be algebraic combinations of unit symbol names, using standard Python mathematical syntax (i.e.
-`**` for the power function, not `^`).
+The primary internal interface for creating new arrays and quantities is through the class
+constructor for `unyt_array`. The constructor takes three arguments. The first argument is the input
+data, which can be an integer, float, list, or array. The second argument, `input_units`, is a unit
+specification which must be a string or `Unit` instance. Last, users may optionally supply a
+`UnitRegistry` instance, which will be attached to the array. If no `UnitRegistry` is supplied, a
+default unit registry is used instead. Unit specification strings must be algebraic combinations of
+unit symbol names, using standard Python mathematical syntax (i.e. `**` for the power function, not
+`^`).
 
 Here is a simple example of `unyt_array` creation:
 
@@ -249,10 +295,12 @@ unyt_array([1, 2, 3]) cm
 unyt_quantity(3, 'J') 
 ```
 
-In addition to the class constructor, we have also defined two convenience functions, `quan`, and `arr`, for quantity and array creation that are attached to the `Dataset` base class.
-These were added to syntactically simplify the creation of arrays with the `UnitRegistry` instance associated with a dataset.
-These functions work exactly like the `unyt_array` and `unyt_quantity` constructors, but pass the `UnitRegistry` instance attached to the dataset to the underlying constructor call.
-For example:
+In addition to the class constructor, we have also defined two convenience functions, `quan`, and
+`arr`, for quantity and array creation that are attached to the `Dataset` base class. These were
+added to syntactically simplify the creation of arrays with the `UnitRegistry` instance associated
+with a dataset. These functions work exactly like the `unyt_array` and `unyt_quantity` constructors,
+but pass the `UnitRegistry` instance attached to the dataset to the underlying constructor call. For
+example:
 
 ```python
 >>> import yt
